fix: input's item alignment is baseline
Set the item alignment in the inputs flex div to baseline to position
the icons correctly.

--- a/packages/components/src/components/input-line.css
+++ b/packages/components/src/components/input-line.css
@@ -14,6 +14,7 @@ textarea {
 }
 div.input {
 	display: flex;
+	align-items: baseline;
 }
 div.input > kol-icon {
 	display: grid;
